Deployment/server/terraform/aws/provision/aws-cert.tf
resource "aws_acm_certificate" "domain" {
  domain_name       = "thinkmay.net"
  validation_method = "EMAIL"


  lifecycle {
    create_before_destroy = true
  }
}

resource "aws_acm_certificate" "subdomain" {
  domain_name       = "*.thinkmay.net"
  validation_method = "EMAIL"


  lifecycle {
    create_before_destroy = true
  }
}

resource "aws_security_group" "worker_group_mgmt_one" {
  name_prefix = "worker_group_mgmt_one"
  vpc_id      = module.vpc.vpc_id

  ingress {
    from_port = 22
    to_port   = 22
    protocol  = "tcp"

    cidr_blocks = [
      "10.0.0.0/8",
    ]
  }
}

resource "aws_security_group" "all_worker_mgmt" {
  name_prefix = "all_worker_management"
  vpc_id      = module.vpc.vpc_id

  ingress {
    from_port = 22
    to_port   = 22
    protocol  = "tcp"

    cidr_blocks = [
      "10.0.0.0/8",
      "172.16.0.0/12",
      "192.168.0.0/16",
    ]
  }
}
